--- a/about.css
+++ b/about.css
@@ -25,21 +25,29 @@
   margin: auto;
   font-family: "Times New Roman", Times, serif;
 }
-.icon {
-  width: 500px;
+.icon img {
+  width: 150px;
   float: left;
-  height: 70px;
+  height: 130px;
+  font-family: "Times New Roman", Times, serif;
+  left: 0px;
+  position: relative;
+  flex-basis: 60%;
+  display: flex;
 }
 
 .logo {
   color: red;
-  font-size: 35px;
-
-  padding-left: 10px;
+  font-size: 15px;
+  left: 32px;
   float: left;
-  padding-top: 10px;
+  padding-top: 100px;
+
   font-weight: 700;
   font-family: "Times New Roman", Times, serif;
+  z-index: 1;
+  position: absolute;
+  flex-basis: 60%;
 }
 
 .menu {
@@ -153,10 +161,10 @@ h1 {
   background-color: #fff;
 }
 
-@media screen and (max-width: 1200px) {
+/*@media screen and (max-width: 1200px) {
   /*Normal Screen*/
 
-  .navbar {
+/*.navbar {
     width: 100%;
     height: 100px;
   }
@@ -175,15 +183,15 @@ h1 {
 }
 @media screen and (max-width: 1170px) {
   /*Login Box*/
-  .main {
+/*.main {
     height: 180vh;
   }
-}
+}*/
 
-@media screen and (max-width: 830px) {
+/*@media screen and (max-width: 830px) {
   /*Tablet*/
 
-  .logo {
+/*.logo {
     margin-left: 240px;
     width: 100%;
     margin-top: 15px;
@@ -206,7 +214,7 @@ h1 {
 @media screen and (max-width: 600px) {
   /*Ipad old version*/
 
-  .logo {
+/*.logo {
     margin-left: 100px;
     font-size: 4vw;
   }
@@ -248,12 +256,18 @@ h1 {
     position: relative;
     left: 30px;
   }
-}
+}*/
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 400px) {
   .logo {
-    margin-left: 10px;
     font-size: 4vw;
+  }
+  .icon img {
+    position: relative;
+    left: 40px;
+  }
+  .menu {
+    width: 100%;
   }
 
   ul {
@@ -264,7 +278,7 @@ h1 {
     margin-left: 30px;
   }
 
-  u li a {
+  ul li a {
     font-size: 2vw;
   }
 
@@ -292,5 +306,11 @@ h1 {
     height: 40px;
     position: relative;
     left: 30px;
+  }
+  #h1 {
+    position: relative;
+    top: 80px;
+  }
+  span {
   }
 }
